force-app/main/default/objects/DispatchAssignDriver__c/DispatchAssignDriver__c.object-meta.xml
<CustomObject>
    <label>配車アサイン情報</label>
    <nameField>
        <displayFormat>DEA-{00000000}</displayFormat>
        <label>配車アサイン情報#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>