force-app/main/default/objects/DispatchAssignDriver__c/fields/Account_F__c.field-meta.xml
<CustomField>
    <fullName>Account_F__c</fullName>
    <formula>DispatchDetail__r.OrderHeader__r.Account__r.Name</formula>
    <label>荷主名</label>
    <type>Text</type>
</CustomField>