force-app/main/default/objects/DispatchAssignDriver__c/fields/AttendanceSheet__c.field-meta.xml
<CustomField>
    <fullName>AttendanceSheet__c</fullName>
    <label>出勤簿</label>
    <length>255</length>
    <type>Text</type>
</CustomField>