force-app/main/default/objects/DispatchAssignDriver__c/fields/CourseName_F__c.field-meta.xml
<CustomField>
    <fullName>CourseName_F__c</fullName>
    <formula>DispatchDetail__r.CourseName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>コース名</label>
    <type>Text</type>
</CustomField>