force-app/main/default/objects/DispatchAssignDriver__c/fields/Date_F__c.field-meta.xml
<CustomField>
    <fullName>Date_F__c</fullName>
    <formula>DriverSchedule__r.Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>日付</label>
    <type>Date</type>
</CustomField>