force-app/main/default/objects/DispatchAssignDriver__c/fields/DispatchDate_F__c.field-meta.xml
<CustomField>
    <fullName>DispatchDate_F__c</fullName>
    <formula>DATEVALUE(DispatchDetail__r.DispatchDateTime__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>配車日</label>
    <type>Date</type>
</CustomField>