force-app/main/default/objects/DispatchAssignDriver__c/fields/DispatchDetail__c.field-meta.xml
<CustomField>
    <fullName>DispatchDetail__c</fullName>
    <label>配車明細</label>
    <referenceTo>DispatchDetail__c</referenceTo>
    <relationshipLabel>配車アサイン情報</relationshipLabel>
    <relationshipName>DispatchAssignDriverList</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>