force-app/main/default/objects/DispatchAssignDriver__c/fields/DispatchVehicle__c.field-meta.xml
<CustomField>
    <fullName>DispatchVehicle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>配車車両</label>
    <referenceTo>DispatchVehicle__c</referenceTo>
    <relationshipLabel>配車アサイン情報</relationshipLabel>
    <relationshipName>DispatchAssignDriverList</relationshipName>
    <type>Lookup</type>
</CustomField>