force-app/main/default/objects/DispatchAssignDriver__c/fields/DrayageAllowance__c.field-meta.xml
<CustomField>
    <fullName>DrayageAllowance__c</fullName>
    <label>横持手当</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>