force-app/main/default/objects/DispatchAssignDriver__c/fields/DriverName_F__c.field-meta.xml
<CustomField>
    <fullName>DriverName_F__c</fullName>
    <formula>DriverSchedule__r.Driver__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ドライバー</label>
    <type>Text</type>
</CustomField>