force-app/main/default/objects/DispatchAssignDriver__c/fields/DriverSchedule__c.field-meta.xml
<CustomField>
    <fullName>DriverSchedule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>勤務情報</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>DriverSchedule__c.WorkStatus__c</field>
            <operation>notEqual</operation>
            <value>休み（有給）, 定休</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>DriverSchedule__c</referenceTo>
    <relationshipLabel>配車アサイン情報</relationshipLabel>
    <relationshipName>DispatchAssignDriverList</relationshipName>
    <type>Lookup</type>
</CustomField>