force-app/main/default/objects/DispatchAssignDriver__c/fields/HighwayTollFee__c.field-meta.xml
<CustomField>
    <fullName>HighwayTollFee__c</fullName>
    <label>高速代</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>