force-app/main/default/objects/DispatchAssignDriver__c/fields/InstructionsAndOthers__c.field-meta.xml
<CustomField>
    <fullName>InstructionsAndOthers__c</fullName>
    <formula>DispatchDetail__r.InstructionsAndOthers__c</formula>
    <label>指示・その他</label>
    <type>Text</type>
</CustomField>