force-app/main/default/objects/DispatchAssignDriver__c/fields/LoadingDate__c.field-meta.xml
<CustomField>
    <fullName>LoadingDate__c</fullName>
    <formula>DispatchDetail__r.OrderHeader__r.LoadingDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>積込日</label>
    <type>Date</type>
</CustomField>