force-app/main/default/objects/DispatchAssignDriver__c/fields/OperationAllowance__c.field-meta.xml
<CustomField>
    <fullName>OperationAllowance__c</fullName>
    <label>運航手当</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>