force-app/main/default/objects/DispatchAssignDriver__c/fields/Over__c.field-meta.xml
<CustomField>
    <fullName>Over__c</fullName>
    <label>オーバー</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>