force-app/main/default/objects/DispatchAssignDriver__c/fields/Rebate__c.field-meta.xml
<CustomField>
    <fullName>Rebate__c</fullName>
    <label>還元</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>