force-app/main/default/objects/DispatchAssignDriver__c/fields/ReserveFieldThree__c.field-meta.xml
<CustomField>
    <fullName>ReserveFieldThree__c</fullName>
    <label>予備3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>