force-app/main/default/objects/DispatchAssignDriver__c/fields/Results__c.field-meta.xml
<CustomField>
    <fullName>Results__c</fullName>
    <defaultValue>false</defaultValue>
    <label>運転日報確認済み</label>
    <type>Checkbox</type>
</CustomField>