force-app/main/default/objects/DispatchAssignDriver__c/fields/Subcontractor_F__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor_F__c</fullName>
    <formula>DispatchDetail__r.Subcontractor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>下請け業者</label>
    <type>Text</type>
</CustomField>