force-app/main/default/objects/DispatchAssignDriver__c/fields/VehicleSerialNumber__c.field-meta.xml
<CustomField>
    <fullName>VehicleSerialNumber__c</fullName>
    <formula>DispatchDetail__r.VehiclelNumber_F__c</formula>
    <label>車番</label>
    <type>Text</type>
</CustomField>