force-app/main/default/objects/DispatchAssignDriver__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DispatchDate_F__c</columns>
    <columns>CourseName_F__c</columns>
    <columns>DriverName_F__c</columns>
    <columns>VehicleSerialNumber__c</columns>
    <columns>Account_F__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>